--- a/static/style.css
+++ b/static/style.css
@@ -1,31 +1,36 @@
-h1 {
-    color: blue;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 300%;
-    text-align: center;
-  }
+.navbar-default .navbar-nav > li > a {
  
-  h2 {
-    color: blue;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 200%;
-    text-align: center;
-  }
- 
-#personal {
-    border-radius: 50%;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    padding: 5px;
-    width: 250px;
-    margin: auto;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
+  color: white;
+  font-size: 15px;
+}
 
-#personal:hover {
-    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+.navbar-default .navbar-brand{
+  font-size: 25px;
+  color: white;
+}
+
+.navbar-default {
+  background-color: black;
+}
+
+.navbar-default .navbar-nav > li > a:hover{
+  color:  rgb(0, 112, 0); 
+
+}
+
+h1 {
+    color: white;
+    font-family: var(--font-main);
+    font-size: 300%;
+    padding-top: 25px;
+  }
+ 
+h2 {
+    color: white;
+    font-family: var(--font-main);
+    font-size: 230%;
+    padding-top: 15px;
+    padding-bottom: 25px;
   }
 
 #snowboard {
@@ -40,7 +45,6 @@ h1 {
     display: block;
     margin-left: auto;
     margin-right: auto;
-
 }
 
 #badminton {
@@ -48,44 +52,51 @@ h1 {
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
 
+.row{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding-bottom: 80px;
 }
   
-  .topnav {
-    overflow: hidden;
-    background-color: #333;
-    position: fixed;
-    top: 0;
-    width: 100%;
-  }
+.btn-primary, .btn-primary:hover{
+  color: white;
+  background-color: transparent;
+  border-color:  rgb(0, 112, 0);
+  font-size: 24px;
+  margin-top: 25px;
+}
 
-  .topnav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 110px;
-    text-decoration: none;
-    font-size: 19px;
-  }
 
-  .topnav a:hover {
-    background-color: #ddd;
-    color: blue;
-  }
-  
-  .topnav a.active {
-    background-color: blue;
-    color: white;
-  }
+.btn-cv, .btn-cv:hover, .btn-life, .btn-life:hover{
+  color:  rgb(0, 112, 0);
+  background-color: transparent;
+  border-color:  rgb(0, 112, 0);
+  font-size: 24px;
+  margin-top: 25px;
+}
 
-  .main{
-    margin-top: 100px;
-  }
+.btn-life:hover{
+  color:  rgb(0, 112, 0);
+}
 
-  /*hide navbar link on larger screens */
-  .topnav .icon {
-    display: none;
-  }
+.btn-cv, .btn-life{
+  color: black;
+}
+.btn-primary:hover{
+  color:  rgb(0, 112, 0);
+  background-color: transparent; 
+}
+
+.life > h1{
+  color: black;
+  font-size: 200%;
+
+}
+
 
   /* when the screen is less than 600px wide display the first only link and the menue bar */
   @media screen and (max-width: 600px) {
@@ -104,6 +115,11 @@ h1 {
       right: 0;
       top: 0;
     }
+
+    .title .content table .table-bordered >thead> tr > th{
+      border: 1px solid red;
+    }
+  
 
     .topnav.responsive a {
       float: none;
@@ -143,9 +159,112 @@ h1 {
     .sidenav a {font-size: 18px;}
   }
 
-  p{
-      font-weight: bold;
-      font-size:x-large;
-      text-align: center;
+
+  .footer > p, h5, .footer-copyright {
+    color:white;
   }
-  
+
+  .footer-copyright > a {
+    color:  rgb(0, 112, 0);
+  }
+
+  p>a{
+    color: rgb(0, 112, 0);  
+  }
+
+  .list-unstyled > li > a {
+    color: white;
+  }
+
+
+  .page-footer{
+    background-color: black;
+  }
+
+ .about {
+   background-image: url("snowboard.jpg");
+   height: 500px;
+   background-size: cover;
+ }
+
+ .about-summary>p{
+   color:white;
+ }
+
+ .about-summary>h1{
+   font-size: 200%;
+ }
+
+ .contact{
+   background-image: url("laptop2.jpg");
+   background-size: cover;
+   background-repeat: no-repeat;
+   height: 520px;
+   background-position: center;
+ }
+
+ .techList{
+  line-height:240%;
+ }
+
+
+ .skills-experience{
+   background-color: rgb(231, 231, 231);
+ }
+.title {
+  background-color: rgb(197, 197, 197);
+  background-image: url("baby1.jpg");
+  background-size: contain;
+  height: 520px;
+  background-position: center;
+
+}
+
+.portfolio{
+  background-image: url("portfolio2.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 570px; 
+}
+
+a.active .nav-link {
+
+  background-color: green !important;
+}
+
+
+.skills > h1 {
+  color: black;
+  font-family: var(--font-main);
+}
+  .personal{
+    background-image: url("personal_picture1.jpg");
+    height: 450px;
+    background-size: contain; 
+  }
+
+  .cv{
+    background-image: url("katecomp.jpg");
+    background-size: contain;
+  }
+
+  .table-bordered >tbody >tr>td{
+    text-align:left;
+    border-color: rgb(0, 112, 0);
+    }
+
+    .baby >img{
+      width:80%; height:80%; 
+    }
+
+    .photo > img{
+      width: 50%; height: 50%;
+    }
+
+    .laptop > img{
+      width:50%; height: 5%;
+    }
+    #carouselExampleControls{
+      width:200px; height:200px;
+
+    }
