--- a/static/style.css
+++ b/static/style.css
@@ -1,109 +1,10 @@
-.navbar-default .navbar-nav > li > a {
- 
-  color: white;
-  font-size: 15px;
-}
-
-.navbar-default .navbar-brand{
-  font-size: 25px;
-  color: white;
-}
-
-.navbar-default {
-  background-color: black;
-}
-
-.navbar-default .navbar-nav > li > a:hover{
-  color:  rgb(0, 112, 0); 
-
-}
-
-h1 {
-    color: white;
-    font-family: var(--font-main);
-    font-size: 300%;
-    padding-top: 25px;
-  }
- 
-h2 {
-    color: white;
-    font-family: var(--font-main);
-    font-size: 230%;
-    padding-top: 15px;
-    padding-bottom: 25px;
-  }
-
-#snowboard {
-    width: 500px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-#gymnastics{
-    width: 500px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-#badminton {
-    width: 500px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.row{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  padding-bottom: 80px;
-}
-  
-.btn-primary, .btn-primary:hover{
-  color: white;
-  background-color: transparent;
-  border-color:  rgb(0, 112, 0);
-  font-size: 24px;
-  margin-top: 25px;
-}
-
-
-.btn-cv, .btn-cv:hover, .btn-life, .btn-life:hover{
-  color:  rgb(0, 112, 0);
-  background-color: transparent;
-  border-color:  rgb(0, 112, 0);
-  font-size: 24px;
-  margin-top: 25px;
-}
-
-.btn-life:hover{
-  color:  rgb(0, 112, 0);
-}
-
-.btn-cv, .btn-life{
-  color: black;
-}
-.btn-primary:hover{
-  color:  rgb(0, 112, 0);
-  background-color: transparent; 
-}
-
-.life > h1{
-  color: black;
-  font-size: 200%;
-
-}
-
-
-  /* when the screen is less than 600px wide display the first only link and the menue bar */
+  /* when the screen is less than 600px wide display the first only link and the menu bar */
   @media screen and (max-width: 600px) {
     .topnav a:not(:first-child) {display: none;}
     .topnav a.icon {
       float: right;
       display: block;
+      color: black;
     }
   }
 
@@ -116,136 +17,127 @@ h2 {
       top: 0;
     }
 
-    .title .content table .table-bordered >thead> tr > th{
-      border: 1px solid red;
-    }
-  
-
     .topnav.responsive a {
       float: none;
       display: block;
       width: 5%;
       text-align: left;
     }
+  }
+
+.navbar-brand{
+  font-size: 25px;
+  color: white;
 }
 
-/* The sidebar menu */
-.sidenav {
-    
-    width: 160px; /* Set the width of the sidebar */
-    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-    top: 0; /* Stay at the top */
-    left: 0;
-    background-color: whitesmoke;
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 20px;
-    margin-top: 100px;
-  }
+.navbar-brand:hover{
+  font-size: 25px;
+  color: rgb(0, 112, 0);
+}
+ 
+a{
+  color: white
+}
 
-  .sidenav a {
-    padding: 6px 8px 6px 16px;
-    text-decoration: none;
-    font-size: 20px;
-    color: black;
-    display: block;
-  }
+a:hover{
+  color: rgb(0, 112, 0);
+}
 
-  .sidenav a:hover {
-    color: blue;
-  }
+h1{
+  color: white;
+  font-family: var(--font-main);
+  font-size: 300%;
+  padding-top: 25px;
 
-  @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
-  }
+}
+ 
+h2{
+  color: white;
+  font-family: var(--font-main);
+  font-size: 200%;
+  padding-top: 15px;
+  padding-bottom: 25px;
+}
 
+#whiteText{
+  color:white;
+}
 
-  .footer > p, h5, .footer-copyright {
-    color:white;
-  }
+.btn-primary, .btn-blackText{
+  color: white;
+  background-color: transparent;
+  border-color:  rgb(0, 112, 0);
+  font-size: 24px;
+  margin-top: 25px;
+}
 
-  .footer-copyright > a {
+.btn-primary:hover, .btn-blackText:hover, .btn-sm:hover {
+  background-color: transparent;
+  color:  rgb(0, 112, 0);
+  border-color:  rgb(0, 112, 0);
+}
+
+.btn-blackText, .btn-sm{
+  color: black;
+}
+
+.btn-sm{
+  font-size: 15px;
+}
+
+  .footer-copyright > a, p > a{
     color:  rgb(0, 112, 0);
   }
-
-  p>a{
-    color: rgb(0, 112, 0);  
-  }
-
-  .list-unstyled > li > a {
-    color: white;
-  }
-
 
   .page-footer{
     background-color: black;
   }
 
- .about {
+ .aboutContainer {
    background-image: url("snowboard.jpg");
    height: 500px;
    background-size: cover;
  }
-
- .about-summary>p{
-   color:white;
- }
-
- .about-summary>h1{
-   font-size: 200%;
- }
-
- .contact{
-   background-image: url("laptop2.jpg");
-   background-size: cover;
-   background-repeat: no-repeat;
-   height: 520px;
-   background-position: center;
- }
-
+ 
  .techList{
   line-height:240%;
  }
 
-
- .skills-experience{
+ .greyContainer{
    background-color: rgb(231, 231, 231);
  }
-.title {
-  background-color: rgb(197, 197, 197);
-  background-image: url("baby1.jpg");
-  background-size: contain;
-  height: 520px;
-  background-position: center;
 
-}
-
-.portfolio{
-  background-image: url("portfolio2.jpg");
-  background-size: cover;
-  background-position: center;
-  height: 570px; 
-}
-
-a.active .nav-link {
-
-  background-color: green !important;
-}
-
-
-.skills > h1 {
-  color: black;
-  font-family: var(--font-main);
-}
-  .personal{
+  .homepageHeader{
     background-image: url("personal_picture1.jpg");
     height: 450px;
     background-size: contain; 
   }
 
-  .cv{
+  .portfolioHeader{
+    background-image: url("portfolio2.jpg");
+    background-size: cover;
+    background-position: center;
+    height: 570px; 
+  }
+
+  .aboutHeader {
+    background-image: url("baby1.jpg");
+    background-size: contain;
+    height: 520px;
+    background-position: center;
+  }
+
+  .cvHeader{
     background-image: url("katecomp.jpg");
     background-size: contain;
+  }
+
+  .contactHeader{
+    background-image: url("laptop2.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 520px;
+    background-position: center;
   }
 
   .table-bordered >tbody >tr>td{
@@ -264,7 +156,7 @@ a.active .nav-link {
     .laptop > img{
       width:50%; height: 5%;
     }
+
     #carouselExampleControls{
       width:200px; height:200px;
-
     }
